--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a {
 }
 #list {
     background-image: url(./Assets/imgs/lights-green.png);
-    background-position: center;
+    background-position: top;
     background-size: cover;
 }
 #contact {
@@ -80,17 +80,21 @@ a {
     background-image: url(./Assets/imgs/HeroImage.png);
     background-size: cover;
     background-position: center;
-    height: 40vh;
-    min-height: 500px;
+    height: 50vh;
+    min-height: 600px;
     max-height: 1200px;
   }
   #accordion { 
     border: 10px solid #383838;
 }
-#projects {
+#payment-options {
     background-image: url(./Assets/imgs/chip2.png);
     background-position: center;
     background-size: cover;
+}
+#projects {
+    height: 50vh;
+    min-height: 600px;
 }
 #support {
     height: 50vh;
@@ -111,3 +115,12 @@ a {
     height:70vh;
     min-height: 500px;
   }
+.slide-up {
+    transform: translateY(80px);
+    opacity: 0;
+    transition: transform 0.6s ease-out, opacity 0.4s ease-out;
+}
+.slide-up-active {
+    transform: translateY(0);
+    opacity: 1;
+}
